# segger

./: .gitignore  README.md  cluster_details.txt  pyproject.toml
docs/: EXPORT.md  PLOT.md  PREDICT.md  SEGMENT.md  VALIDATION_METRICS.md
scripts/: PARAMETER_STEPS.md  benchmark_status_dashboard.sh  benchmark_status_dashboard_lsf_multi.sh  build_benchmark_pdf_report.py  build_benchmark_validation_table.sh  build_benchmark_validation_table_lsf_multi.sh  build_default_10x_reference_artifacts.py  download_standard_scrna_ref.py  inspect_segger_run.py  plot_lsf_segger_mode_resources.py  quick_count_transcripts_from_benchmark_inputs.py  quick_list_dataset_transcripts.py  run_ablation_study.sh  run_crc_feature_ablation.sh  run_lsf_segger_benchmark.sh  run_mossi_feature_ablation.sh  run_param_benchmark_2gpu.sh  run_robustness_ablation_2gpu.sh
scripts/presentation/: experiments.md  experiments_plan.md
segger_lsf_benchmark_fixed/datasets/xenium_crc/: dataset_context.env  job_plan.tsv
segger_lsf_benchmark_fixed/datasets/xenium_mouse_brain/: dataset_context.env
segger_lsf_benchmark_fixed/datasets/xenium_mouse_liver/: dataset_context.env
segger_lsf_benchmark_fixed/summaries/: aggregate_status_snapshot.tsv  segger_modes.tsv
src/segger/cli/: config.yaml  main.py
tests/: test_atlas.py  test_cli_predict_scale_factor.py  test_fragment_exports.py  test_fragment_mode.py  test_lsf_benchmark_scripts.py  test_partition_dataset.py  test_preprocessor.py  test_spatialdata_fragment_exports.py  test_validation_me_genes.py  test_validation_quick_metrics.py  test_xenium_export_zip.py
(+258 files in other folders)
