[project]
name = "segger"
version = "0.1.0"
description = "Segmentation of spatial transcriptomics data"
authors = [
    {name = "Elyas Heidari", email = "elyas.heidari@dkfz-heidelberg.de"},
    {name = "Andrew Moorman", email = "moormana@mskcc.org"},
]
keywords = ["spatial-transcriptomics", "segmentation", "image-analysis"]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "anndata",
    "cyclopts",
    "geopandas",
    "lightning",
    "numba",
    "numpy",
    "opencv-python",
    "pandas",
    "polars",
    "pqdm",
    "pyarrow",
    "rtree",
    "scanpy",
    "scipy",
    "shapely",
    "scikit-image",
    "scikit-learn",
    "tifffile",
    "torch_geometric",
    "zarr",
]

[project.optional-dependencies]
spatialdata = [
    "spatialdata>=0.7.2",
    "spatialdata-io>=0.6.0",
]

spatialdata-io = [
    "spatialdata-io>=0.6.0",
]

census = [
    "cellxgene-census>=1.2.1",
]

sopa = [
    "sopa>=2.0.0",
    "spatialdata>=0.7.2",
]

spatialdata-all = [
    "spatialdata>=0.7.2",
    "spatialdata-io>=0.6.0",
    "sopa>=2.0.0",
]

plot = [
    "matplotlib>=3.7",
    "uniplot>=0.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/segger"]

[project.scripts]
segger = "segger.cli.main:app"
